# reusable_user_app

./: LICENSE  README.rst  setup.cfg
django_user.egg-info/: PKG-INFO  SOURCES.txt
users/: admin.py  managers.py  models.py
users/migrations/: 0001_initial.py
